--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
+    "postinstall": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "create-admin": "node scripts/create-admin.js"
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^12.34.0",
     "next": "16.1.6",
+    "next-auth": "^4.24.11",
     "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
